# text-classifier

./: pyproject.toml
