[tool.poetry]
name = "text-class"
version = "0.1.0"
description = ""
authors = ["Anthony Joel Williams <williamsjanthony15@yahoo.com\">"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
